# Discord_Line_Message_Sync

./: .gitignore  Dockerfile  LICENSE  cache.py  discord_bot.py  keep_alive.py  line_bot.py  line_sticker_downloader.py  main.py  pyproject.toml  renovate.json  requirements.txt  run.bat  run.sh  setup.bat  utilities.py
.github/workflows/: sync-requirements.yml
build_executable/: README.md
