[project]
name = "LineBackupToDiscord"
version = "0.1.0"
description = "A bot that backup messages from Line to Discord in real-time"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "apnggif~=0.1.4",
    "discord-py==2.5.2",
    "fastapi==0.116.1",
    "line-bot-sdk==3.17.1",
    "pydantic~=2.11.7",
    "pyyaml==6.0.2",
    "requests~=2.32.3",
    "uvicorn==0.35.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.15.0",
]
